2008-06-04  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_enable_im_on_toggled):
	more error handling.
	(im_chooser_simple_prefs_button_on_clicked): likewise.
	(im_chooser_simple_im_start_cb): likewise.
	(im_chooser_simple_im_stop_cb): likewise.
	(im_chooser_simple_instance_init): likewise.
	(im_chooser_simple_show_error): new function.
	(im_chooser_simple_get_widget): get rid of the note.

	* src/main.c: clean up and trivial changes for imsettings-0.100.

	* README: Update since imsettings is now separate project.

2008-05-14  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_instance_init):
	makes the progress window not resizable and not deletable window.

	* src/im-chooser-simple.c (_im_chooser_simple_update_im_list): clean up.

	* src/im-chooser-simple.c (im_chooser_simple_instance_init):
	Make the window border to the progress window. (RH#444818)

2008-04-25  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (_im_chooser_simple_update_im_list):
	Do not turn on the "Enable input method feature" check box if IM isn't running. (RH#443765)

	* configure.ac:
	* requires: Require dbus-glib >= 0.74 for
	dbus_connection_get_g_connection.

2008-04-18  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: change the default suffix to .conf.

2008-04-14  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: run imsettings-xim after imsettings-start.
	ensure dbus session is established before doing something with imsettings.

2008-04-10  Akira TAGOH  <tagoh@redhat.com>

	* README: Add xinputrc stuff.

	* data/xinput.sh.in.in: Add settings for XIM support.

2008-04-07  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c: clean up.

	* src/im-chooser-simple.c (_im_chooser_simple_update_im_list):
	don't update the IM list if no IM is available. (RH#440519)

2008-03-26  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: real fix to not update .xinputrc.
