@@ -1,2 +1,2 @@
 GLIB_REQUIRED=2.16.0
-IMSETTINGS_REQUIRED=0.100.0
+IMSETTINGS_REQUIRED=0.101.0
